master
- aeosynth
  fix filter highlighting

3.9.5
- Mayhem
  Update captcha longevity to 5 minutes max, as according to 4chan's change.

3.9.4
- aeosynth
  Meta keybind modifier
- Mayhem
  Fix spoiler and code tag keybinds regression.
  Add /an/ and /toy/ archive redirection.
  Add /cgl/, /e/, /mu/ and /w/ archive redirection.

3.9.3
- Mayhem
  Add /cgl/, /e/, /mu/ and /w/ archive redirection.

3.9.2
- Mayhem
  Add /x/ archive redirection.

3.9.1
- aeosynth
  fix threaded quote bugs

3.9.0
- Mayhem
  Fix some stub issues.
  Add a per filter stub setting.
  Fix quote previewing of forward hidden posts.
  Fix file size info in case of spoiler image.
- aeosynth
  fix recursive filtering w/ threaded quotes
  use .threadContainer to help userstylers~

3.8.2
- aeosynth
  fix expanding comments
  fix qp

3.8.1
- Mayhem
  Fix file size formatting always using integers.

3.8.0
- aeosynth
  fix thread highlighting of topmost thread
  merge mayhem 2.30.5
- Mayhem
  Fix syntax highlighting in code of fetched posts on /g/.
  Add quick [code] tags keybind (alt+c).

3.7.2
- aeosynth
  better fix for /g/ syntax highlighting

3.7.1
- aeosynth
  fix /g/ code syntax highlighting on updated posts
  fix /sci/ latex on updated posts
  merge mayhem 2.30.4

2.30.4
- Mayhem
  Add /co/ and /k/ archive redirection.
  Fix quote resurrection of existing posts.

3.7.0
- aeosynth
  rm whitespace preservation (ty based moot)

3.6.3
- aeosynth
  tweak whitespace tabs

3.6.2
- queue
  whitespace preservation w/ invisible characters

3.6.1
- aeosynth + queue
  fix whitespace preservation w/ visible characters

3.6.0
- aeosynth
  add /k/ archive
- queue
  re-added whitespace preservation
  don't tell moot how it works

3.5.0
- aeosynth
  rm whitespace preserveration (fuck you moot)

3.4.0
- queue
  QR posting now preserves whitespace/indentation
  making code or ASCII art easier
- aeosynth
  mv prefetch controls after imgexpand controls, instead of above
  anonymize fetched quote previews