@@ -1,6 +1,7 @@
 master
 - aeosynth
   fix filter highlighting
+  add delete button
 
 3.9.5
 - Mayhem
